# ComfyUI-OneAPI

./: CHANGELOG.md  README.md  curl.sh  debug_last_workflow.json  oneapi.py  openapi_spec.py  pyproject.toml  swagger_ui.py
docs/: API_IMAGE_TO_VIDEO.md  DYNAMIC_SERVER_ADDRESS.md  SWAGGER_QUICKSTART.md  swagger-ui-integration.md
tests/: test_i2v.py
workflows/: ltx-more-image-2-3.json  ltx-more-image-3-3.json  ltx-more-image-4-3.json  ltx-more-image-5-3.json  ltx2_landscape.json  ltx2_portrait.json
workflows/原comfyUI工作流/: LTX2首尾帧工作流__ComfyUI.json  Z-Image-Turbo文生图_ComfyUI.json
