[project]
name = "ComfyUI-OneAPI-Swagger"
description = "Simple REST API interfaces for ComfyUI with dynamic parameter replacement and output management"
version = "1.0.1"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/hackyinge/ComfyUI-OneAPI-Swagger"

[tool.comfy]
PublisherId = "hackyinge"
DisplayName = "ComfyUI-OneAPI-Swagger"
Icon = ""

[tool.comfy.author]
name = "hackyinge"
url = "https://github.com/hackyinge"